--- a/data/project.json
+++ b/data/project.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "publish_pages_app": true,
+    "publish_pages_app": false,
     "publish_sha": "",
     "publish_iso_date": ""
   },
@@ -18,10 +18,34 @@
     "auto_populate_home_page": true,
     "additional_users": [],
     "tags": {
-      "tagGroups": [],
-      "tags": []
+      "tagGroups": [
+        {
+          "category": "Speakers",
+          "color": "#ADFFD9"
+        },
+        {
+          "category": "Type",
+          "color": "#ADFEFF"
+        }
+      ],
+      "tags": [
+        {
+          "tag": "Mel Gussow",
+          "category": "Speakers"
+        },
+        {
+          "tag": "Alice Walker",
+          "category": "Speakers"
+        },
+        {
+          "tag": "Transcript",
+          "category": "Type"
+        }
+      ]
     },
     "created_at": "2025-01-07T20:06:30.191Z",
-    "updated_at": "2025-01-07T20:06:30.191Z"
-  }
+    "updated_at": "2025-01-07T20:14:49.064Z",
+    "generate_pages_site": false
+  },
+  "is_private": false
 }
