--- a/data/project.json
+++ b/data/project.json
@@ -1,6 +1,6 @@
 {
   "publish": {
-    "publish_pages_app": false,
+    "publish_pages_app": true,
     "publish_sha": "",
     "publish_iso_date": ""
   },
@@ -16,7 +16,13 @@
     "authors": "Tanya Clement, editor",
     "media_player": "avannotate",
     "auto_populate_home_page": true,
-    "additional_users": [],
+    "additional_users": [
+      {
+        "login_name": "absempere",
+        "avatar_url": "https://avatars.githubusercontent.com/u/38816173?v=4",
+        "admin": false
+      }
+    ],
     "tags": {
       "tagGroups": [
         {
@@ -56,8 +62,8 @@
       ]
     },
     "created_at": "2025-01-07T20:06:30.191Z",
-    "updated_at": "2025-01-07T21:01:54.007Z",
-    "generate_pages_site": false
+    "updated_at": "2025-01-07T21:30:07.850Z",
+    "generate_pages_site": true
   },
   "is_private": false
 }
